manifests/besu/k8s-backups/20250630-204124/ingressroutes-backup.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T17:41:52Z","generation":4,"name":"besu-graphql-route","namespace":"paladin","resourceVersion":"9863543","uid":"025107e7-f9f2-43c9-91d1-0b03c86e45b5"},"spec":{"entryPoints":["web","websecure"],"routes":[{"kind":"Rule","match":"Host(`graphql-besu.cluster.eita.cloud`)","middlewares":[{"name":"besu-retry-middleware"}],"services":[{"kind":"TraefikService","name":"besu-graphql [...]
    creationTimestamp: "2025-05-05T17:41:52Z"
    generation: 4
    name: besu-graphql-route
    namespace: paladin
    resourceVersion: "9875702"
    uid: 025107e7-f9f2-43c9-91d1-0b03c86e45b5
  spec:
    entryPoints:
    - web
    - websecure
    routes:
    - kind: Rule
      match: Host(`graphql-besu.cluster.eita.cloud`)
      middlewares:
      - name: besu-retry-middleware
      services:
      - kind: TraefikService
        name: besu-graphql-lb
    tls: {}
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T17:41:52Z","generation":4,"name":"besu-rpc-route","namespace":"paladin","resourceVersion":"9863541","uid":"ce9e3993-969d-4fb3-bd6e-b91552c25188"},"spec":{"entryPoints":["web","websecure"],"routes":[{"kind":"Rule","match":"Host(`rpc-besu.cluster.eita.cloud`)","middlewares":[{"name":"besu-retry-middleware"}],"services":[{"kind":"TraefikService","name":"besu-rpc-lb"}]}],"tl [...]
    creationTimestamp: "2025-05-05T17:41:52Z"
    generation: 4
    name: besu-rpc-route
    namespace: paladin
    resourceVersion: "9875703"
    uid: ce9e3993-969d-4fb3-bd6e-b91552c25188
  spec:
    entryPoints:
    - web
    - websecure
    routes:
    - kind: Rule
      match: Host(`rpc-besu.cluster.eita.cloud`)
      middlewares:
      - name: besu-retry-middleware
      services:
      - kind: TraefikService
        name: besu-rpc-lb
    tls: {}
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T17:41:52Z","generation":4,"name":"besu-ws-route","namespace":"paladin","resourceVersion":"9863542","uid":"6dd05fdb-ec06-48d5-be9f-627acc3bc6e1"},"spec":{"entryPoints":["web","websecure"],"routes":[{"kind":"Rule","match":"Host(`ws-besu.cluster.eita.cloud`)","middlewares":[{"name":"besu-ws-middleware"},{"name":"besu-retry-middleware"}],"services":[{"kind":"TraefikService", [...]
    creationTimestamp: "2025-05-05T17:41:52Z"
    generation: 4
    name: besu-ws-route
    namespace: paladin
    resourceVersion: "9875704"
    uid: 6dd05fdb-ec06-48d5-be9f-627acc3bc6e1
  spec:
    entryPoints:
    - web
    - websecure
    routes:
    - kind: Rule
      match: Host(`ws-besu.cluster.eita.cloud`)
      middlewares:
      - name: besu-ws-middleware
      - name: besu-retry-middleware
      services:
      - kind: TraefikService
        name: besu-ws-lb
    tls: {}
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T16:30:33Z","generation":1,"name":"paladin1-ui-ingress","namespace":"paladin","resourceVersion":"9842183","uid":"1cfdadf2-3ed6-4c6c-91f8-b1aaaf1f8fc1"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`paladin1.cluster.eita.cloud`) \u0026\u0026 PathPrefix(`/ui`)","middlewares":[{"name":"my-basic-auth"}],"services":[{"name":"paladin-node1","port": [...]
    creationTimestamp: "2025-05-05T16:30:33Z"
    generation: 1
    name: paladin1-ui-ingress
    namespace: paladin
    resourceVersion: "9875708"
    uid: 1cfdadf2-3ed6-4c6c-91f8-b1aaaf1f8fc1
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`paladin1.cluster.eita.cloud`) && PathPrefix(`/ui`)
      middlewares:
      - name: my-basic-auth
      services:
      - name: paladin-node1
        port: 8548
    tls:
      secretName: paladin1-tls
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T16:30:55Z","generation":1,"name":"paladin2-ui-ingress","namespace":"paladin","resourceVersion":"9842186","uid":"92361e97-f572-4549-96b5-c03037fd32b3"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`paladin2.cluster.eita.cloud`) \u0026\u0026 PathPrefix(`/ui`)","middlewares":[{"name":"my-basic-auth"}],"services":[{"name":"paladin-node2","port": [...]
    creationTimestamp: "2025-05-05T16:30:55Z"
    generation: 1
    name: paladin2-ui-ingress
    namespace: paladin
    resourceVersion: "9875711"
    uid: 92361e97-f572-4549-96b5-c03037fd32b3
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`paladin2.cluster.eita.cloud`) && PathPrefix(`/ui`)
      middlewares:
      - name: my-basic-auth
      services:
      - name: paladin-node2
        port: 8548
    tls:
      secretName: paladin2-tls
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T16:31:30Z","generation":1,"name":"paladin3-ui-ingress","namespace":"paladin","resourceVersion":"9842187","uid":"d3ba7334-856f-4c33-9133-c7bbc660ef3a"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`paladin3.cluster.eita.cloud`) \u0026\u0026 PathPrefix(`/ui`)","middlewares":[{"name":"my-basic-auth"}],"services":[{"name":"paladin-node3","port": [...]
    creationTimestamp: "2025-05-05T16:31:30Z"
    generation: 1
    name: paladin3-ui-ingress
    namespace: paladin
    resourceVersion: "9875712"
    uid: d3ba7334-856f-4c33-9133-c7bbc660ef3a
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`paladin3.cluster.eita.cloud`) && PathPrefix(`/ui`)
      middlewares:
      - name: my-basic-auth
      services:
      - name: paladin-node3
        port: 8548
    tls:
      secretName: paladin3-tls
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-certmanager
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-certmanager","kubernetes.io/ingress.class":"traefik","traefik.ingress.kubernetes.io/router.entrypoints":"websecure"},"name":"rpc-besu-ingress","namespace":"paladin"},"spec":{"routes":[{"kind":"Rule","match":"Host(`rpc-besu.cluster.eita.cloud`)","services":[{"name":"besu-node1","port":8545},{"name":"besu-node2","port":8545},{"name":"besu-node3","port":8545}]}] [...]
      kubernetes.io/ingress.class: traefik
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
    creationTimestamp: "2025-05-05T19:01:42Z"
    generation: 1
    name: rpc-besu-ingress
    namespace: paladin
    resourceVersion: "9876740"
    uid: 11ac0fbc-8755-4b57-8718-1080e4f19a32
  spec:
    routes:
    - kind: Rule
      match: Host(`rpc-besu.cluster.eita.cloud`)
      services:
      - name: besu-node1
        port: 8545
      - name: besu-node2
        port: 8545
      - name: besu-node3
        port: 8545
    tls:
      secretName: rpc-besu-tls
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-certmanager
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-certmanager","kubernetes.io/ingress.class":"traefik","traefik.ingress.kubernetes.io/router.entrypoints":"websecure"},"name":"ws-besu-ingress","namespace":"paladin"},"spec":{"routes":[{"kind":"Rule","match":"Host(`ws-besu.cluster.eita.cloud`)","services":[{"name":"besu-node1","port":8546},{"name":"besu-node2","port":8546},{"name":"besu-node3","port":8546}]}]," [...]
      kubernetes.io/ingress.class: traefik
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
    creationTimestamp: "2025-05-05T19:02:16Z"
    generation: 1
    name: ws-besu-ingress
    namespace: paladin
    resourceVersion: "9876977"
    uid: e504e09d-74b1-4b56-8728-6be88dfbf349
  spec:
    routes:
    - kind: Rule
      match: Host(`ws-besu.cluster.eita.cloud`)
      services:
      - name: besu-node1
        port: 8546
      - name: besu-node2
        port: 8546
      - name: besu-node3
        port: 8546
    tls:
      secretName: ws-besu-tls
kind: List
metadata:
  resourceVersion: ""
