manifests/besu/k8s-backups/20250630-204124/middlewares-backup.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T17:41:43Z","generation":1,"name":"besu-retry-middleware","namespace":"paladin","resourceVersion":"9849835","uid":"28e49591-75bf-4711-bf6e-b09e32ad0431"},"spec":{"retry":{"attempts":3,"initialInterval":"500ms"}}}
    creationTimestamp: "2025-05-05T18:58:48Z"
    generation: 1
    name: besu-retry-middleware
    namespace: paladin
    resourceVersion: "9875721"
    uid: d25c6375-548e-4dde-a9a3-529075388594
  spec:
    retry:
      attempts: 3
      initialInterval: 500ms
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T17:41:43Z","generation":1,"name":"besu-ws-middleware","namespace":"paladin","resourceVersion":"9849833","uid":"0fb2ecef-8f4d-4a9d-baf2-25d2087c12bf"},"spec":{"headers":{"customRequestHeaders":{"Connection":"Upgrade","Upgrade":"websocket"}}}}
    creationTimestamp: "2025-05-05T18:58:49Z"
    generation: 1
    name: besu-ws-middleware
    namespace: paladin
    resourceVersion: "9875723"
    uid: c2261226-684f-4cd2-a4d4-5fa4b9106dec
  spec:
    headers:
      customRequestHeaders:
        Connection: Upgrade
        Upgrade: websocket
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"creationTimestamp":"2025-05-05T16:29:37Z","generation":1,"name":"my-basic-auth","namespace":"paladin","resourceVersion":"9842194","uid":"e26f3dfa-0f99-45e2-af5b-8ce30d4ddd46"},"spec":{"basicAuth":{"secret":"my-basic-auth-secret"}}}
    creationTimestamp: "2025-05-05T16:29:37Z"
    generation: 1
    name: my-basic-auth
    namespace: paladin
    resourceVersion: "9875725"
    uid: e26f3dfa-0f99-45e2-af5b-8ce30d4ddd46
  spec:
    basicAuth:
      secret: my-basic-auth-secret
kind: List
metadata:
  resourceVersion: ""
